# agentic-call-handel

./: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
.playwright-mcp/: page-2026-06-24T08-53-35-721Z.yml  page-2026-06-24T08-54-52-538Z.yml  page-2026-06-24T08-55-17-014Z.yml  page-2026-06-24T08-55-34-367Z.yml  page-2026-06-24T08-59-04-893Z.yml  page-2026-06-24T08-59-19-288Z.yml  page-2026-06-24T09-01-25-014Z.yml  page-2026-06-24T09-01-37-810Z.yml  page-2026-06-24T09-02-06-220Z.yml  page-2026-06-24T09-02-37-555Z.yml
apps/api/: .env.example  pyproject.toml  voiceops_control.db-journal  voiceops_test_runtime.db-journal
apps/api/app/: __init__.py  agents.py  auth.py  config.py  db.py  event_hub.py  main.py  migrations.py  models.py  orchestrator.py  schemas.py  seed.py  services.py  twilio_browser.py  twilio_handler.py  twilio_media.py
apps/api/tests/: conftest.py  test_api_routes.py  test_isolation.py  test_session_engine.py
apps/voice-worker/: README.md
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: add-article-form.tsx  add-customer-form.tsx  agent-builder-form.tsx  app-shell.tsx  auto-refresh.tsx  call-link-generator.tsx  call-workbench.tsx  callback-card.tsx  (+23 more)
docs/: ARCHITECTURE.md  DEPLOYMENT_RAILWAY.md  DEPLOYMENT_VERCEL.md  FEATURE_AUDIT_2026-06-30.md  detail.md
infra/docker/: docker-compose.yml
scripts/: migrate_program_policy.py  railway-start.mjs
tmp/pdfs/: ai-call-handling-extract.txt
(+50 files in other folders)
