[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceops-control-api"
version = "0.1.0"
description = "Tenant-aware control plane for browser-first voice support SaaS."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pyjwt>=2.10.0",
  "anthropic>=0.40.0",
  "httpx>=0.28.0",
  "websockets>=15.0.0",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.2.0"
]

[tool.pytest.ini_options]
pythonpath = ["apps/api"]
testpaths = ["apps/api/tests"]
